# laptopLens

./: .env  .gitignore  compose.yaml  manage.py  pyproject.toml  quicktest.py
api/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_rename_memory_standard_disc_tech_type_and_more.py  0003_cpu_brand.py
frontend-app/: package-lock.json  package.json
frontend-app/src/: App.jsx
laptoplens/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
